apps/argocd/argocd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
spec:
  template:
    spec:
      automountServiceAccountToken: true
      containers:
        - name: avp
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.14.11
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp.yaml
              name: cmp-plugin
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
        - name: avp-kustomize
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.14.11
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-kustomize.yaml
              name: cmp-plugin
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
        - name: avp-helm
          command: [/var/run/argocd/argocd-cmp-server]
          image: quay.io/argoproj/argocd:v2.14.11
          securityContext:
            runAsNonRoot: true
            runAsUser: 999
          volumeMounts:
            - mountPath: /var/run/argocd
              name: var-files
            - mountPath: /home/argocd/cmp-server/plugins
              name: plugins
            - mountPath: /tmp
              name: tmp
            - mountPath: /home/argocd/cmp-server/config/plugin.yaml
              subPath: avp-helm.yaml
              name: cmp-plugin
            - name: custom-tools
              subPath: argocd-vault-plugin
              mountPath: /usr/local/bin/argocd-vault-plugin
      volumes:
        - configMap:
            name: cmp-plugin
          name: cmp-plugin
        - emptyDir: {}
          name: custom-tools
