apps/argocd/argocd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd
  namespace: argocd
  # annotations:
  #   tailscale.com/hostname: "argocd-lon1-core"
  #   tailscale.com/tags: "tag:lon1-core,tag:admin-app"
  #   external-dns.alpha.kubernetes.io/hostname: REDACTED.
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
